// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Definition widget should have a default snapshot: first render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        Read the excerpt and answer the question below. 
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        The Governor and Council of the Massachusetts had much conference many days; and at last . . . . concluded a peace and friendship with 
        <div
          class="perseus-widget-container perseus-widget__definition widget-inline"
        >
          <button
            aria-controls=":r0:"
            aria-expanded="false"
            aria-label="Definition of: the Pequots"
            class="button_vr44p2-o_O-reset_1ejugoq-o_O-link_13xlah4-o_O-inlineStyles_uraxz"
            data-wb-floating-reference=":r2:"
            id=":r0:-anchor"
            type="button"
          >
            <span
              class="definition"
            >
              the Pequots
            </span>
          </button>
        </div>
        , upon these conditions.
      </div>
    </div>
  </div>
</div>
`;

exports[`Definition widget should have an open state snapshot: open state 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-floating-ui-inert=""
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        Read the excerpt and answer the question below. 
      </div>
    </div>
    <div
      class="paragraph"
      data-perseus-paragraph-index="1"
    >
      <div
        class="paragraph"
      >
        The Governor and Council of the Massachusetts had much conference many days; and at last . . . . concluded a peace and friendship with 
        <div
          class="perseus-widget-container perseus-widget__definition widget-inline"
        >
          <button
            aria-controls=":r6:"
            aria-expanded="true"
            aria-label="Definition of: the Pequots"
            class="button_vr44p2-o_O-reset_1ejugoq-o_O-link_13xlah4-o_O-inlineStyles_uraxz"
            data-floating-ui-inert=""
            data-wb-floating-reference=":r8:"
            id=":r6:-anchor"
            type="button"
          >
            <span
              class="definition"
            >
              the Pequots
            </span>
          </button>
          <span
            aria-hidden="true"
            data-floating-ui-inert=""
            style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
            tabindex="-1"
          />
          <span
            data-floating-ui-focus-guard=""
            data-type="outside"
            role="button"
            style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
            tabindex="0"
          />
          <span
            aria-owns=":r9:"
            data-floating-ui-inert=""
            style="clip-path: inset(50%); position: fixed; top: 0px; left: 0px;"
          />
          <span
            data-floating-ui-focus-guard=""
            data-type="outside"
            role="button"
            style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
            tabindex="0"
          />
        </div>
        , upon these conditions.
      </div>
    </div>
  </div>
</div>
`;
